# uuidminer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  find_most_difficult.py  uuidminer.sln
scripts/: embed_kernel.py
src/: main.cpp
src/backends/: backend.h
src/backends/cuda/: cuda_backend.cu  cuda_backend.h
src/backends/metal/: .clang-format  kernel.metal  metal_backend.h  metal_backend.mm
src/backends/opencl/: kernel.cl  opencl_backend.cpp  opencl_backend.h
src/common/: common.h  config.h
uuidminer/: common.h  kernel.cu  md5.cu  md5.cuh  uuidminer.vcxproj
